--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
     },
     "dependencies": {
         "@emotion/cache": "^11.11.0",
-        "@emotion/react": "^11.11.4",
+        "@emotion/react": "^11.13.3",
         "@emotion/server": "^11.11.0",
-        "@emotion/styled": "^11.11.5",
+        "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^5.15.20",
-        "@mui/material": "^5.15.20",
+        "@mui/material": "^5.16.7",
+        "@mui/styled-engine-sc": "^6.0.2",
+        "@mui/x-data-grid": "^7.16.0",
         "front-matter": "^4.0.2",
         "glob": "^10.4.2",
         "js-yaml": "^4.1.0",
         "markdown-to-jsx": "^7.4.7",
         "next": "14.2.7",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "styled-components": "^6.1.13"
     },
     "devDependencies": {
-        "@stackbit/cms-git": "^1.0.2",
+        "@stackbit/cms-git": "^0.0.55",
         "@stackbit/types": "^2.0.2",
         "@types/glob": "^8.1.0",
         "@types/js-yaml": "^4.0.9",
