--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,7 @@
             {
                 "type": "Link",
                 "label": "Sign up/Log in",
-                "url": "https://docs.netlify.com/visual-editor/overview/",
+                "url": "",
                 "underline": "hover"
             }
         ]
