config.json: updated favicon

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,6 +1,6 @@
 {
     "type": "Config",
-    "favicon": "/images/favicon.svg",
+    "favicon": "/images/g.png",
     "header": {
         "title": "Magic Miles Trucks",
         "navLinks": [
