--- a/content/data/config.json
+++ b/content/data/config.json
@@ -25,7 +25,7 @@
         ]
     },
     "footer": {
-        "copyrightText": "Powered by [Netlify](https://www.netlify.com/platform/).",
+        "copyrightText": "Powered by MMtrucks\n",
         "navLinks": [
             {
                 "type": "Link",
