--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,6 +1,6 @@
 {
     "type": "Config",
-    "favicon": "/images/g.png",
+    "favicon": "/images/nextjs.svg",
     "header": {
         "title": "Magic Miles Trucks",
         "navLinks": [
@@ -38,12 +38,6 @@
                 "label": "About",
                 "underline": "hover",
                 "url": "/about"
-            },
-            {
-                "type": "Link",
-                "label": "Documentation",
-                "underline": "hover",
-                "url": "https://docs.netlify.com/visual-editor/overview/"
             }
         ]
     }
